--- a/IT/codebattle/my-app/src/style/WPE.css
+++ b/IT/codebattle/my-app/src/style/WPE.css
@@ -1,6 +1,6 @@
 .welcomePageEducator {
     font-family: 'Arial', sans-serif;
-    background-color: #F9F9F9;
+    background-color: #121212;
     min-height: 100vh;
 }
 
@@ -15,14 +15,14 @@
     max-width: 800px;
     margin: 40px auto;
     padding: 20px;
-    background-color: white;
+    background-color: #1F1F1F;;
     border-radius: 8px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     text-align: center;
 }
 
 .mainContentEducator h2 {
-    color: #2E86C1;
+    color: rgb(147, 219, 217);
     font-size: 2.5em;
     animation: fadeIn 2s;
 }
@@ -39,7 +39,7 @@
 }
 
 .dashboardCard2 {
-    background-color: white;
+    background-color: #1F1F1F;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
