--- a/IT/codebattle/my-app/src/style/Det.css
+++ b/IT/codebattle/my-app/src/style/Det.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    background-color: #fff;
+    background-color: #1F1F1F;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     margin-top: 70px;
